--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "HW",
     "version": "0.1.0",
     "private": true,
-    "homepage": "https://AlievLomach.github.io/HW/",
+    "homepage": "https://Matsepura-Yana.github.io/react-hw-01-components/",
     "author": "https://github.com/AlievLomach",
     "dependencies": {
         "@emotion/react": "^11.11.1",
